Git ignore test-library

--- a/projects/project-components-rdh/src/lib/input-text/input-text.component.html
+++ b/projects/project-components-rdh/src/lib/input-text/input-text.component.html
@@ -1,1 +1,4 @@
-<p>input-text works!</p>
+<div>
+	<label for="" class="form-label">texto</label>
+	<input type="text" name="" id="" placeholder="" class="form-control">
+</div>
