Input Number / Refactor Text Number

--- a/projects/project-components-rdh/src/lib/input-number/input-number.component.html
+++ b/projects/project-components-rdh/src/lib/input-number/input-number.component.html
@@ -1,20 +1,24 @@
 <mat-form-field>
 	<mat-label
-		*ngIf="label!==''">
-		{{label}}</mat-label>
+		*ngIf="label!==''"
+	>{{label}}</mat-label>
 	<input
 		matInput
 		type="text"
-		#inputText
+		#inputNumber
+		[placeholder]="placeholder"
 		[formControl]="control"
 		[name]="id"
 		[id]="id"
-		[ngClass]="transformClass()"
-		[placeholder]="placeholder"
-		[value]="value"
 		[disabled]="disabled"
-		[required]="required">
-	<button *ngIf="closeOption" matSuffix mat-icon-button aria-label="Clear" (click)="clearValue()">
+		[required]="required"
+		(input)="formatingNumber()">
+	<button
+		*ngIf="closeOption"
+		matSuffix
+		mat-icon-button
+		aria-label="Clear"
+		(click)="clearValue()">
 		<mat-icon>close</mat-icon>
 	</button>
 	<mat-error *ngIf="getErrors().length>0">
